# wyvern

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/: conf.py  index.rst
docs/_templates/autosummary/: module.rst
docs/plugins/: index.rst  itchio.rst  operavision.rst  yt_dlp.rst
wyvern/: __init__.py  __main__.py  abstract.py  main.py
wyvern/data_store/: __init__.py  yaml.py
wyvern/minimal/: __init__.py  __main__.py  main.py  manager.py
wyvern/plugins/: __init__.py  itchio.py  operavision.py  ytdlp.py
