[project]
name = "wyvern"
version = "0.1.0"
description = "Extensible Downloader Framework"
authors = [
    {name = "The Artful Bodger"}
]
license = {"file" = "LICENSE"}
readme = "README.md"

dependencies = []

[project.optional-dependencies]
doc = [
  "sphinx-autopackagesummary >= 1.3",
  "piccolo-theme >= 0.16.0",
  "sphinx >= 7.0.1",
]
dev = [
    "black >= 23.3.0",
    "pre-commit >= 3.3.3",
    "docformatter >= 1.7.3",
    "ruff >= 0.0.277",
]

[build-system]
requires = ["whey"]
build-backend = "whey"

[tool.black]
line-length = 80

[tool.ruff]
select = ["ALL"]

[tool.ruff.pydocstyle]
convention = "pep257"
