[project]
name = "wyvern"
version = "0.1.0"
description = "Extensible Downloader Framework"
authors = [
    {name = "The Artful Bodger"}
]
license = {"file" = "LICENSE"}
readme = "README.md"

dependencies = [
  "alive-progress >= 3.1.4",
  "beautifulsoup4 >= 4.12.2",
  "coloredlogs >=15.0.1",
  "requests >= 2.31.0",
  "yt-dlp >= 2023.7.6",
]

[project.optional-dependencies]
doc = [
  "piccolo-theme >= 0.16.0",
  "sphinx >= 7.0.1",
  "sphinx-autopackagesummary >= 1.3",
  "sphinx-pyproject >= 0.1.0",
  "typing_extensions >= 4.7.1",
]
dev = [
    "black >= 23.3.0",
    "pre-commit >= 3.3.3",
    "docformatter >= 1.7.3",
    "ruff >= 0.0.277",
]

[project.scripts]
wyvern = "wyvern.main:main"

[build-system]
requires = ["whey"]
build-backend = "whey"

[tool.black]
line-length = 80

[tool.ruff]
select = ["ALL"]
line-length = 80

[tool.ruff.pydocstyle]
convention = "pep257"

[tool.rstcheck]
ignore_directives = ["autosummary"]
report = "info"
